--- a/ExcelReadWohnung/ExcelReadWohnung/ExcelReadWohnung.csproj
+++ b/ExcelReadWohnung/ExcelReadWohnung/ExcelReadWohnung.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EPPlus" Version="5.8.7" />
     <PackageReference Include="Microsoft.Office.Interop.Excel" Version="15.0.4795.1000" />
   </ItemGroup>
 
